--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.6
 gymnasium==0.29.1
 numpy==1.26.3
 opencv-python==4.9.0.80
+stable-baselines3==2.2.1
 torch==2.1.2
 torchrl==0.2.1
 tqdm==4.66.1
